subindo ajustes do materail

--- a/cap1.html
+++ b/cap1.html
@@ -36,8 +36,7 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h1>
-					A EUROPA MODERNA: O PODER DAS MONARQUIAS NACIONAIS, CULTURA
-					E RELIGIÃO NUM MUNDO EM TRANSFORMAÇÃO.
+					Capítulo 1: A Europa moderna: o poder das monarquias nacionais, cultura e religião num mundo em transformação.
 				</h1>
 				<p>
 					A Idade Moderna foi um período histórico de grandes transformações na Europa, mas
@@ -47,7 +46,7 @@
 					Como se desenvolveu o processo da centralização do poder nas mãos dos reis e quem foram
 					os principais teóricos do absolutismo? O que foi o Renascimento, quais as suas principais
 					características e abrangência? Identifique os principais nomes do movimento renascentista na
-					Europa. Qual o contexto com que se desenvolve o movimento da Reforma e quais foram as
+					Europa. Qual o contexto com que se desenvolveu o movimento da Reforma e quais foram as
 					principais lideranças nela envolvidas?
 				</p>		
 				<p>Contextualizando</p>
@@ -57,7 +56,6 @@
 					exercício de um poder absoluto dos reis, capazes então de submeter à nobreza feudal que
 					dominava o cenário local ao qual estavam seus domínios territoriais estabelecidos.
 				</p>
-				<p>Assista ao Vídeo e anote em seu material as informações mais relevantes:</p>
 				<h4>CONSTRUINDO CONHECIMENTOS</h4>
 				<p>
 					No desenrolar do processo de centralização do poder monárquico, a burguesia em franca
@@ -97,14 +95,14 @@
 					<li>1643 e 1715.</li>
 					<li>Fernando e Isabel - governaram a Espanha no século XVI.</li>
 				</ul>			
-				<h5>O RENASCIMENTO</h5>
+				<h4>O RENASCIMENTO</h4>
 				<p>
 					Teve suas origens ainda no medievo, tratando-se de um movimento de caráter cultural
 					variado, que demarca uma guinada na concepção de mundo e nos valores que perduraram ao
 					longo da Idade Média para algo completamente diferente, atendendo aos anseios da burguesia
 					emergente daquele período.
 				</p>
-				<p>Para ajuda-lo a contextualizar o período do renascimento, assista o vídeo a seguir:		</p>
+
 				<p>
 					A Itália foi o local de maior destaque na difusão dos ideais renascentistas, e isto em todos os
 					aspectos, sendo nas artes na literatura, a demonstração mais evidente desta transformação que
@@ -142,14 +140,11 @@
 				</p>
 				<p>
 					<span class="image right">
-						<img src="./images/image02.png" alt="">
+						<img src="./images/image02.png" alt=""> <br>
+						<span class="legenda">
+							http://www.vivatoscana.com.br/2015/05/voce-sabe-quem-foi-dante-alighieri.html
+						</span>
 					</span>
-					O vídeo abaixo apresenta algumas das
-					características mais relevantes do
-					renascimento, como o individualismo. Assista
-					e perceba como o individualismo está
-					presente no contexto da sociedade durante o
-					período.
 				</p>
 				<p>
 					Usando uma ferramenta de busca na internet, pesquise obras dos artistas listados abaixo bem
@@ -161,14 +156,18 @@
 					Michelangelo <b>Buonarroti </b>(1475-1564), Rafael <b>Sanzio</b> (1483-1520),
 					<b>Donatello</b> (1386- 1466). 
 				</p>	
-				<blockquote>
-					<p>VOCÊ SABIA?</p>
-					<p>
-						O Museu de Arte de São Paulo possui algumas obras que são do
-						período renascentista, como “São Jerônimo Penitente no Deserto”
-						(1448-1451) de Andrea Mantegna.
-					</p>
-				</blockquote>	
+				<p>
+					<div class="destaque" style="clear:both">
+						<blockquote>
+							<p>VOCÊ SABIA?</p>
+							<p>
+								O Museu de Arte de São Paulo possui algumas obras que são do
+								período renascentista, como “São Jerônimo Penitente no Deserto”
+								(1448-1451) de Andrea Mantegna.
+							</p>
+						</blockquote>	
+					</div>
+				</p>
 				<div class="img">
 					<img src="./images/image03.png" alt="">
 				</div>
@@ -176,7 +175,11 @@
 				<h5>LUTERANISMO</h5>
 				<p>
 					<span class="image right">
-						<img src="./images/image04.png" alt="">
+						<img src="./images/image04.png" alt=""> <br>
+						<span class="legenda">
+							(Cena do filme sobre a vida
+							de Martinho Lutero)
+						</span>
 					</span>
 					O monge agostiniano Martinho Lutero, foi um dos mais
 					importantes nomes da Reforma Protestante. Ele criticou o
@@ -194,7 +197,7 @@
 					seguidores das suas ideias. 
 				</p>				
 				<p>Cena do filme sobre a vida de Martinho Lutero	</p>	
-				<h4>CALVINISMO</h4>	
+				<h4 style="clear:both;margin-top:40px">CALVINISMO</h4>	
 				<p>
 					<span class="image left">
 						<img src="./images/image05.png" alt="">
@@ -208,7 +211,7 @@
 					outras crenças a ideia da predestinação oriunda da vontade de Deus. Esta
 					crença poderia ser verificada através de uma vida materialmente 
 				</p>
-				<p style="font-size: 14px !important">http://pt.infobiografias.com/biografia/14868/Juan-Calvino.htm	</p>	
+				<p class="legenda">http://pt.infobiografias.com/biografia/14868/Juan-Calvino.htm	</p>	
 				<h4>ANGLICANISMO</h4>
 				<p>
 					<span class="image right">
@@ -241,19 +244,21 @@
 					longo do capítulo, as principais motivações do movimento reformista ao propor a separação
 					com o catolicismo.
 				</p>
-				<h4>O QUE APRENDI</h4>
-				<p>
-					Neste capítulo você aprendeu que durante o período histórico conhecido como Idade
-					Moderna, tomaram curso grandes transformações na Europa, e que estas mudanças no cenário
-					político, econômico, social e cultural no cenário europeu acabaram por repercutir nos outros
-					continentes. Os marcos históricos que delimitam esse período são, a queda do Império
-					Bizantino, em 1453 como o seu início, e a Revolução Francesa, em 1789 como o seu término.
-					Vimos como se desenvolveu o processo da centralização do poder nas mãos dos reis e quem
-					foram os principais teóricos do absolutismo. Estudou-se o Renascimento, as suas principais
-					características e abrangência, identificando os principais nomes do movimento renascentista
-					na Europa. Também conhecemos o contexto com que se desenvolveu o movimento da
-					Reforma e quais foram as principais lideranças nela envolvidas.
-				</p>
+				<div class="destaque">
+					<h4>O QUE APRENDI</h4>
+					<p>
+						Neste capítulo você aprendeu que durante o período histórico conhecido como Idade
+						Moderna, tomaram curso grandes transformações na Europa, e que estas mudanças no cenário
+						político, econômico, social e cultural no cenário europeu acabaram por repercutir nos outros
+						continentes. Os marcos históricos que delimitam esse período são, a queda do Império
+						Bizantino, em 1453 como o seu início, e a Revolução Francesa, em 1789 como o seu término.
+						Vimos como se desenvolveu o processo da centralização do poder nas mãos dos reis e quem
+						foram os principais teóricos do absolutismo. Estudou-se o Renascimento, as suas principais
+						características e abrangência, identificando os principais nomes do movimento renascentista
+						na Europa. Também conhecemos o contexto com que se desenvolveu o movimento da
+						Reforma e quais foram as principais lideranças nela envolvidas.
+					</p>
+				</div>
 			</div> <!--/inner-->
 		</section>
 		<!--
