--- a/cap2.html
+++ b/cap2.html
@@ -45,8 +45,12 @@
 					ingleses e teve como princípios o racionalismo e o liberalismo. Na Europa do século XVIII o
 					absolutismo passou cada vez mais a sofrer fortes contestações. Os filósofos iluministas foram
 					pensadores que subsidiaram as revoluções que buscavam reformar ou acabar com o Antigo
-					Regime. É neste contexto que iremos ver desenvolver-se um onde de monarquias que
-					adotaram princípios iluministas em sua forma de governar. Mas também temos um dos
+					Regime. É neste
+					contexto que iremos observar
+					o desenvolvimento de
+					monarquias que adotaram
+					princípios iluministas em sua
+					forma de governar. Mas também temos um dos
 					momentos mais marcantes da história que ficou conhecido como a Revolução Francesa e
 					posteriormente a Era Napoleônica. Ao longo da leitura do capítulo tente responder às
 					seguintes questões: Quais as principais características da Revolução Inglesa? O que significou
@@ -55,7 +59,7 @@
 				</p>
 				<h4>CONSTRUINDO CONHECIMENTOS		</h4>
 				<p>
-					Na a dinastia anterior a dos Stuarts, chamada de Tudor, houve um período de centralização do
+					Na dinastia anterior a dos Stuarts, chamada de Tudor, houve um período de centralização do
 					poder que gerou grande prosperidade e riqueza econômica obtida através das conquistas
 					realizadas nos reinados de Henrique VIII e Elisabeth I. A consolidação do anglicanismo
 					favoreceu a unificação do Estado, fato este que viabilizou o enfrentamento dos ingleses contra
@@ -144,7 +148,7 @@
 					desenvolver os meios adequados ao seu equilíbrio.
 				</p>
 				<p>
-					Entre os principais teóricos do liberalismo estão <b>John Locke e Adan Smith</b>. O filósofo
+					Entre os principais teóricos do liberalismo estão <b>John Locke e Adam Smith</b>. O filósofo
 					britânico John Locke entrou para a história como o pai do liberalismo, tendo escrito a
 					importante obra “Dois Tratados sobre o Governo”. Nele, Locke atacou a monarquia ao refutar
 					o poder absoluto do rei.
@@ -190,8 +194,11 @@
 					<span class="image right">
 						<img src="./images/image10.png" alt="">
 					</span>
-					Tem início a Revolução Francesa que, no ano de 1789 que culminou com a derrubada do Luís
-					XVI do trono da França no ano de 1792. Os
+					No ano de
+					1789 teve início a Revolução
+					Francesa, que culminou com a
+					derrubada de Luís XVI do trono da
+					França no ano de 1792. Os
 					ideais revolucionários uniram diferentes
 					grupos da sociedade em prol de um mesmo
 					objetivo. Eram pobres, desempregados,
@@ -235,7 +242,8 @@
 				</p>
 				<p>
 					<span class="image left">
-						<img src="./images/image11.png" alt="">
+						<img src="./images/image11.png" alt=""> <br>
+						<span class="legenda">Napoleão Bonaparte - http://apuntandoalpalo.com/biografia-napoleon/</span>
 					</span>
 					Após a morte do líder jacobino Robespierre em 1794, a alta burguesia elabora outra
 					constituição para a França, estabelecendo que a república seria controlada por um Diretório.
@@ -244,7 +252,7 @@
 					francesa pela Europa, ameaçando os demais Estados do
 					continente.
 				</p>
-				<p>Napoleão Bonaparte - <span style="font-size: 14px !important">http://apuntandoalpalo.com/biografia-napoleon/</span></p>
+				
 				<p>
 						No ano de 1806, é declarado o Bloqueio Continental contra a
 						Inglaterra, a fim de fragilizar a sua economia. Depois de
@@ -268,18 +276,20 @@
 						marcando o Bloqueio Continental.
 					</p>		
 				</blockquote>	
-				<h4>O QUE APRENDI		</h4>	
-				<p>
-					Neste capítulo aprendemos sobre a Revolução Inglesa corrida no século XVII, no ano de
-					1640, conhecida como o primeiro grande levante de caráter burguês ocorrido na Europa. Ela
-					teve como princípios o racionalismo e o liberalismo. Na Já no século XVIII o absolutismo
-					passou cada vez mais a sofrer fortes contestações feitas pelos filósofos iluministas,
-					pensadores que subsidiaram as revoluções que buscavam reformar ou acabar com o Antigo
-					Regime. Neste contexto desenvolveram-se monarquias que adotaram princípios iluministas
-					em sua forma de governar. Nesta mesma época também temos um dos momentos mais
-					marcantes da história que ficou conhecido como a Revolução Francesa e posteriormente a Era
-					Napoleônica.
-				</p>													
+				<div class="destaque">
+					<h4>O QUE APRENDI		</h4>	
+					<p>
+						Neste capítulo aprendemos sobre a Revolução Inglesa corrida no século XVII, no ano de
+						1640, conhecida como o primeiro grande levante de caráter burguês ocorrido na Europa. Ela
+						teve como princípios o racionalismo e o liberalismo. Já no século XVIII o absolutismo
+						passou cada vez mais a sofrer fortes contestações feitas pelos filósofos iluministas,
+						pensadores que subsidiaram as revoluções que buscavam reformar ou acabar com o Antigo
+						Regime. Neste contexto desenvolveram-se monarquias que adotaram princípios iluministas
+						em sua forma de governar. Nesta mesma época também temos um dos momentos mais
+						marcantes da história que ficou conhecido como a Revolução Francesa e posteriormente a Era
+						Napoleônica.
+					</p>
+				</div>													
 			</div> <!--/inner-->
 		</section>
 
