--- a/cap3.html
+++ b/cap3.html
@@ -36,8 +36,7 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h1>
-					AS RELAÇÕES POLÍTICO-ECONÔMICAS ENTRE A EUROPA E A AMÉRICA E
-					OS PROCESSOS DE INDEPENDÊNCIA.
+					Capítulo 3: As relações político-econômicas entre a Europa e a América e os processos de independência.
 				</h1>
 				<p>
 					A chegada dos Europeus a América no final o século XV desencadeou um processo de
@@ -101,7 +100,10 @@
 				</p>
 				<p>
 					<span class="image right">
-						<img src="./images/image13.png" alt="">
+						<img src="./images/image13.png" alt=""> <br>
+						<span class="legenda">
+							http://www.luzcom.com.br/inca/html/ruinas.htm
+						</span>
 					</span>
 					No século XVI tem início o processo de colonização da América,
 					sendo a Espanha responsável pela ocupação de diversas regiões deste
@@ -113,7 +115,7 @@
 					Ouro e pedras preciosas eram utilizados pelos Inca para objetos de
 					adorno e culto.
 				</p>
-				<p style="font-size: 14px !important">http://www.luzcom.com.br/inca/html/ruinas.htm	</p>	
+
 				<p>
 					As populações nativas americanas como os incas, astecas e maias passaram por um processo
 					de dominação e aculturação tendo a sua cultura destruída, sendo-lhes imposto a cultura e os
@@ -122,33 +124,33 @@
 					questionamentos ao seu poder.
 				</p>
 				<p>
-					Das colônias se esperava basicamente que fornecessem a metrópole produtos in natura,
+					Das colônias se esperava basicamente que fornecessem a metrópole produtos <i>in natura</i>,
 					metais e pedras preciosas. Nas grandes propriedades que produziam a cana de açúcar ou o
 					algodão, na extração de madeiras como o pau-brasil ou ainda na exploração de minérios, a
 					mão de obra era escrava, nativa ou proveniente da África. 
 				</p>
 				<p>
 					Em algumas situações adotou-se a exploração do trabalho compulsório como a servidão
-					temporária, a mita e a encomenda. A mita, ou repartimiento era uma forma de trabalho
+					temporária, a mita e a <i>encomienda</i>. A mita, ou repartimiento era uma forma de trabalho
 					compulsório onde as populações indígenas da América Espanhola eram escaladas para
 					jornadas de trabalho recebendo baixas remunerações e uma porcentagem do trabalho
 					realizado.
 				</p>
 				<p>
-					Outro sistema de trabalho bastante utilizado pelos espanhóis foi o da encomienda concedida
+					Outro sistema de trabalho bastante utilizado pelos espanhóis foi o da <i>encomienda</i> concedida
 					pela Coroa. Esta prática colocava o trabalho das comunidades indígenas sob os cuidados de
 					uma encomendero que os utilizava na agricultura e no trabalho das minas.
 				</p>
 				<p>
 					Com o passar do tempo, e na medida em que os descendentes de europeus nascidos na
-					América, chamados de criollos, foram sentido o peso da metrópole sobre os seus negócios,
+					América, chamados de <i>criollos</i>, foram sentido o peso da metrópole sobre os seus negócios,
 					tiveram início os movimentos de resistência. Durante o século XVIII ocorreram diversas
 					revoltas que foram reprimidas com muita violência pelos representantes da coroa em solo
 					americano, até que no século XIX, o processo de independência ganhou força.
 				</p>
 				<p>
-					Entre os principais líderes da independência na América Espanhola estão Simón Bolivar e
-					San Martín. Símon Bolivar foi um líder político e militar venezuelano, de tendência liberal.
+					Entre os principais líderes da independência na América Espanhola estão Simón Bolívar e
+					San Martín. Símon Bolívar foi um líder político e militar venezuelano, de tendência liberal.
 					No ano de 1813 liderou a invasão da Venezuela, sendo recebido e aclamado pela população
 					como o “libertador”. San Martín foi um líder político e militar argentino que atuou de forma
 					decisiva nos processos de independência da América, especialmente nos casos da Argentina,
@@ -160,12 +162,12 @@
 				<h4>O BRASIL: ASPECTOS DA COLONIZAÇÃO À INDEPENDÊNCIA</h4>
 				<p>
 					A chegada dos portugueses ao Brasil em 22 de abril de 1500 não trouxe de imediato a
-					colonização destas terras, mas sim a exploração das riquezas naturais, especialmente o paubrasil extraído da Mata Atlântica.
+					colonização destas terras, mas sim a exploração das riquezas naturais, especialmente o pau-brasil extraído da Mata Atlântica.
 				</p>	
 				<p>
 					Esta árvore tinha um grande valor no mercado europeu, pois dela se extraía a seiva utilizada
 					para tingir tecidos na cor vermelha. A prática do escambo junto as populações nativas foi
-					desenvolvida no intuito de coopta-los para o trabalho de corte do pau-brasil e carregamento
+					desenvolvida no intuito de cooptá-los para o trabalho de corte do pau-brasil e carregamento
 					nos navios.
 				</p>
 				<p>
@@ -177,26 +179,27 @@
 				</div>
 				<p>
 					Nas primeiras três décadas que sucederam a chegada dos portugueses ao Brasil, este território
-					foi atacado por holandeses, ingleses e franceses que saqueavam e contrabandeavam o paubrasil. As Expedições Guarda-Costas enviadas pela coroa portuguesa não foram o suficiente
+					foi atacado por holandeses, ingleses e franceses que saqueavam e contrabandeavam o pau-brasil. As Expedições Guarda-Costas enviadas pela coroa portuguesa não foram o suficiente
 					para a proteção do litoral, sendo necessário dar curso ao seu processo de colonização antes
 					que o território fosse dominado por outra monarquia.
 				</p>
 				<p>
 					<span class="image right">
-						<img src="./images/image16.png" alt="">
+						<img src="./images/image16.png" alt=""> <br>
+						<span class="legenda">Engenho de açúcar - http://www.portalsaofrancisco.com.br/historia-do-brasil/engenho-de-acucar</span>	
 					</span>
 					Martin Afonso de Souza foi o responsável pela primeira expedição de colonização no ano de
 					1530, tendo como principais objetivos
-					como objetivos a povoação do território, a
+					 a povoação do território, a
 					expulsão dos invasores e o cultivo de canade-açúcar, produto de grande valor no
 					mercado europeu. O nordeste brasileiro foi
-					palco das grandes plantações de cana-deaçúcar devido às condições climáticas
+					palco das grandes plantações de cana-de-açúcar devido às condições climáticas
 					favoráveis, o que favoreceu o plantio em
 					larga escala. Tem início no Brasil a
-					utilização da mão-obra-obra escrava, de
+					utilização da mão-de-obra-obra escrava, de
 					origem africana em larga escala.
 				</p>
-				<p>Engenho de açúcar - <span style="font-size: 14px !important;">http://www.portalsaofrancisco.com.br/historia-do-brasil/engenho-de-acucar</span>	</p>	
+				
 				<p>
 					O engenho de açúcar tornou-se a base da economia colonial, utilizando-se da mão-de-obra
 					africana escrava. O objetivo dos senhores de engenho era a venda do açúcar para o mercado
@@ -241,18 +244,18 @@
 					O Brasil colonial desenvolveu-se como uma sociedade patriarcal onde o senhor de engenho
 					exercia seu poder, comandando e submetendo os mais fracos conforme os seus interesses.
 					Nesta sociedade as mulheres tinham os seus poderes limitados ao ambiente doméstico que,
-					em última instância as fazia submissas aos homens que detinham o poder sobre elas. A casagrande foi a maior expressão deste modelo de família patriarcal. Seu oposto foi a senzala
+					em última instância as fazia submissas aos homens que detinham o poder sobre elas. A casa-grande foi a maior expressão deste modelo de família patriarcal. Seu oposto foi a senzala
 					onde a população negra vivia sob o regime do medo e da opressão, sem as mínimas condições
 					de dignidade.
 				</p>
-				Q<p>
-				Q	uestões políticas envolvendo a Portugal e Espanha dão curso a invasão holandesa no Brasil.
+				<p>
+				Questões políticas envolvendo a Portugal e Espanha dão curso a invasão holandesa no Brasil.
 					A unificação das coroas ibéricas entre os anos de 1580 e 1640, nas mãos da monarquia
 					espanhola mexeu nos interesses holandeses na região que passaram a adotar medidas
 					extremas em relação ao Brasil. de 1630 e 1654, o Nordeste brasileiro foi alvo de ataques e
 					invasões. O comércio do açúcar foi o maior dos interesses holandeses nestas terras, tendo o
 					desenvolvido até o ano de 1654 quando são expulsos do país.
-				Q</p>
+				</p>
 				<p>
 					A exploração das minas de ouro trouxe muitos lucros para a coroa portuguesa que cobrava
 					impostos sobre que era encontrado. O quinto, ou seja, 20% de todo ouro encontrado na
@@ -328,7 +331,7 @@
 					</tr>
 				</table>	
 				<p>
-					Em virtude da expansão napoleônica sobre a Península Ibérica a Corte Portuguesa transferese ao Brasil no ano de 1808, instalando-se na cidade do Rio de Janeiro. Neste período foi
+					Em virtude da expansão napoleônica sobre a Península Ibérica a Corte Portuguesa transfere-se ao Brasil no ano de 1808, instalando-se na cidade do Rio de Janeiro. Neste período foi
 					aberto o comércio brasileiro aos países amigos de Portugal, entre eles a Inglaterra, que
 					adquiriu vantagens comerciais que acabaram inclusive por prejudicar o desenvolvimento da
 					indústria em solo brasileiro.
@@ -342,21 +345,23 @@
 					proclama a Independência no dia 7 de setembro de 1822, tornando-se o primeiro imperador
 					do Brasil, com o título de D. Pedro I.
 				</p>
-				<h4>O QUE APRENDI</h4>
-				<p>
-					Neste capítulo você aprendeu que com a chegada dos Europeus na América no final o século
-					XV desencadeou-se um processo de conquista do território frente às populações locais, bem
-					como deu início a disputas entre as monarquias europeias que desejavam ampliar seus
-					quadros coloniais fora do continente. Neste contexto teve início um modelo de relação
-					político-comercial que ficaria conhecido como Pacto Colonial. O Pacto Colonial teve por
-					base um formato de acumulo de riquezas por parte das potências metropolitanas apoiando-se
-					no que se convencionou chamar de política econômica mercantilista. A expansão europeia na
-					América foi repleta de fatos e processos que marcaram em muito as populações de ambos os
-					lados do atlântico, e que culminaram com o processo das independências americanas. O
-					Brasil, única colônia portuguesa em solo americano, apresentou as suas peculiaridades em
-					relação aos demais territórios colônias da América, mantendo a monarquia como sistema
-					político e somente no final do século XIX instituindo o regime republicano.	
-				</p>																								
+				<div class="destaque">
+					<h4>O QUE APRENDI</h4>
+					<p>
+						Neste capítulo você aprendeu que com a chegada dos europeus na América no final o século
+						XV desencadeou-se um processo de conquista do território frente às populações locais, bem
+						como deu início a disputas entre as monarquias europeias que desejavam ampliar seus
+						quadros coloniais fora do continente. Neste contexto teve início um modelo de relação
+						político-comercial que ficaria conhecido como Pacto Colonial. O Pacto Colonial teve por
+						base um formato de acúmulo de riquezas por parte das potências metropolitanas apoiando-se
+						no que se convencionou chamar de política econômica mercantilista. A expansão europeia na
+						América foi repleta de fatos e processos que marcaram em muito as populações de ambos os
+						lados do Atlântico, e que culminaram com o processo das independências americanas. O
+						Brasil, única colônia portuguesa em solo americano, apresentou as suas peculiaridades em
+						relação aos demais territórios colônias da América, mantendo a monarquia como sistema
+						político e somente no final do século XIX instituindo o regime republicano.	
+					</p>	
+				</div>																							
 			</div> <!--/inner-->
 		</section><!-- /Main -->
 	</div>
