--- a/cap4.html
+++ b/cap4.html
@@ -36,9 +36,7 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h1>
-					O MUNDO SOBRE TENSÃO: ASPECTOS DA EXPANSÃO IMPERIALISTA, E O
-					ESTADO DE BELIGERÂNCIA NO CONTURBADO CENÁRIO INTERNO
-					EUROPEU.
+					Capítulo 4: O mundo sobre tensão: aspectos da expansão imperialista, e o estado de beligerância no conturbado cenário interno europeu.
 				</h1>
 				<p>
 					A primeira metade do século XIX foi um período de grandes contestações a ordem social e
@@ -174,7 +172,8 @@
 				</p>
 				<p>
 					<span class="image right">
-						<img src="./images/image20.png" alt="">
+						<img src="./images/image20.png" alt=""> <br>
+						<span class="legenda">Dinastia Romanov. A centro o czar Nicolau II, Imperador da Rússia <br>	http://ahistoriacomoelafoi.blogfolha.uol.com.br/files/2017/03/Nicholas_II_and_children_with_Cossacks_of_the_Guard_cropped.jpg	</span>	
 					</span>
 					Mas antes de falarmos sobre eles, é importante lembrarmos que a saída da Rússia do conflito
 					no ano de 1917, deu lugar a uma série de disputas internas que culminaram com o fim da
@@ -191,9 +190,9 @@
 					completo o
 					desenvolvimento
 					econômico, social e político
-					do país. Dinastia Romanov. A centro o czar Nicolau II, Imperador da Rússia
+					do país. 
 				</p>
-				<p style="font-size: 14px !important;">	http://ahistoriacomoelafoi.blogfolha.uol.com.br/files/2017/03/Nicholas_II_and_children_with_Cossacks_of_the_Guard_cropped.jpg	</p>	
+				
 				<p>
 					O envolvimento da Rússia na I Guerra Mundial foi recebido num primeiro momento como
 					uma alternativa de unificar a população e voltar a exibir no cenário interno a força política do
@@ -258,23 +257,25 @@
 						daquele período.
 					</p>				
 				</blockquote>	
-				<h4>O QUE APRENDI</h4>
-				<p>
-					Ao término deste capítulo você aprendeu que a primeira metade do século XIX foi um
-					período de grandes contestações à ordem social e política europeia, agitando o cenário interno
-					europeu. Viu também que entre os anos de 1820 e 1848 os movimentos ligados ao
-					nacionalismo, ao liberalismo e também ao socialismo agitaram bandeiras em nome de
-					ideologias que se colocavam a questionar e pedir o fim do Antigo Regime ou dos seus
-					resquícios em solo europeu. Foi ainda um período de movimentação das fronteiras coloniais,
-					onde as anexações de territórios na África e na Ásia buscavam garantir o desenvolvimento
-					das grandes potências europeias. Você pode perceber que o conturbado cenário geopolítico
-					daquela época desencadeou conflitos que culminaram na I Guerra Mundial, a primeira grande
-					guerra envolvendo praticamente todos os países europeus e as suas respectivas colônias. Ao
-					seu término desenrola-se a Revolução na Rússia que pôs fim ao regime czarista introduziu
-					uma nova ordem política, tendo por base a ideologia socialista que sacudiu as monarquias do
-					continente. Finalmente, você viu que ganharam força as ideias fascistas na Itália e o nazismo
-					que em poucos anos conduziria Adolf Hitler ao governo alemão.	
-				</p>														
+				<div class="destaque">
+					<h4>O QUE APRENDI</h4>
+					<p>
+						Ao término deste capítulo você aprendeu que a primeira metade do século XIX foi um
+						período de grandes contestações à ordem social e política europeia, agitando o cenário interno
+						europeu. Viu também que entre os anos de 1820 e 1848 os movimentos ligados ao
+						nacionalismo, ao liberalismo e também ao socialismo agitaram bandeiras em nome de
+						ideologias que se colocavam a questionar e pedir o fim do Antigo Regime ou dos seus
+						resquícios em solo europeu. Foi ainda um período de movimentação das fronteiras coloniais,
+						onde as anexações de territórios na África e na Ásia buscavam garantir o desenvolvimento
+						das grandes potências europeias. Você pode perceber que o conturbado cenário geopolítico
+						daquela época desencadeou conflitos que culminaram na I Guerra Mundial, a primeira grande
+						guerra envolvendo praticamente todos os países europeus e as suas respectivas colônias. Ao
+						seu término desenrola-se a Revolução na Rússia que pôs fim ao regime czarista introduziu
+						uma nova ordem política, tendo por base a ideologia socialista que sacudiu as monarquias do
+						continente. Finalmente, você viu que ganharam força as ideias fascistas na Itália e o nazismo
+						que em poucos anos conduziria Adolf Hitler ao governo alemão.	
+					</p>
+				</div>														
 			</div> <!--/inner-->
 		</section>
 	</div>
