--- a/cap5.html
+++ b/cap5.html
@@ -36,16 +36,15 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h1>
-					UM MUNDO EM CONFLITO: A GEOPOLÍTICA DO SÉCULO XX E AS
-					DISPUTAS EM NOME DA IDEOLOGIA.
+					Capítulo 5: Um mundo em conflito: a geopolítica do século XX e as disputas em nome da ideologia.
 				</h1> 
 				<p>
-					O Maior conflito bélico entre as nações mundiais teve curso na primeira metade do século
+					O maior conflito bélico entre as nações mundiais teve curso na primeira metade do século
 					XX e entrou para a história com o nome de II Guerra Mundial. A II Guerra Mundial teve
 					como pano de fundo os resquícios do termino do grande conflito anterior que ao acabar, não
 					conseguiu criar um clima de paz entre as nações europeias daquele período. A conjugação das
 					forças aliadas impediu o avanço alemão impondo-lhes pesadas sanções ao termino da guerra.
-					Tem início o processo que ficou conhecido na história como a Revolução Chinesa,
+					Teve início o processo que ficou conhecido na história como a Revolução Chinesa,
 					movimento que instituiu uma nova ordem política e ideológica no país através das ideias
 					socialistas. O período posterior a II Guerra Mundial foi chamado de Guerra Fria, uma vez que
 					opunha dois blocos ideologicamente contrários, mas sem que com isso as potências
@@ -101,7 +100,11 @@
 				</p>
 				<p>
 					<span class="image right">
-						<img src="./images/image21.png" alt="">
+						<img src="./images/image21.png" alt=""> <br>
+						<span class="legenda">
+							Ataque aéreo a Pearl Harbor 
+							https://br.pinterest.com/pin/270919733804119732/
+						</span>
 					</span>
 					Entre os anos de 1939 e 1941 os países do Eixo
 					conquistaram diversos territórios. A Alemanha
@@ -110,13 +113,10 @@
 					África, o Japão conquista a Manchúria, e a
 					Itália a Albânia e territórios da Líbia.
 				</p>
-				<p>
-					Ataque aéreo a Pearl Harbor
-					<span style="font-size: 14px !important;">https://br.pinterest.com/pin/270919733804119732/</span>
-				</p>
+
 				<p>
 					No ano de 1941 o Japão desencadeia um ataque
-					aéreo a Pearl Harbor, uma base militar norteamericana no Oceano Pacífico. Este fato fez
+					aéreo a Pearl Harbor, uma base militar norte-americana no Oceano Pacífico. Este fato fez
 					com que os EUA entrassem na Guerra ao lado
 					dos Aliados contra as potências do Eixo
 				</p>
@@ -130,7 +130,11 @@
 				</p> 
 				<p>
 					<span class="image right">
-						<img src="./images/image22.png" alt="">
+						<img src="./images/image22.png" alt=""> <br>
+						<span class="legenda">
+							Soldados brasileiros na Itália <br>
+								https://tokdehistoria.com.br/2013/02/08/eles-desonraram-a-farda-da-forca-expedicionaria-brasileira/</span>
+						</span>	
 					</span>
 					O Brasil também participou da II
 					Guerra Mundial ao lado dos Aliados,
@@ -147,11 +151,7 @@
 					já haviam deixado Paris e a França
 					ressurgia do jugo alemão. 
 				</p>
-				<p>
-					Soldados brasileiros na Itália
-					<span style="font-size: 14px !important;">
-						https://tokdehistoria.com.br/2013/02/08/eles-desonraram-a-farda-da-forca-expedicionaria-brasileira/</span>
-				</p>	
+
 				<p>
 						No ano seguinte, no dia 2 de maio de 1945, os soviéticos e estadunidenses tomam a cidade de
 						Berlim, dando início ao processo de rendição dos nazistas. Restaria ainda o Japão que só viria
@@ -161,7 +161,7 @@
 				<p>
 					Encerrava-se assim a II Guerra Mundial com a rendição dos países do Eixo e o julgamento
 					dos nazistas no tribunal de Nuremberg, acusados de crimes contra a humanidade. Neste
-					mesmo ano de1945 foi criada a Organização das Nações Unidas - ONU, para que houvesse a
+					mesmo ano de 1945 foi criada a Organização das Nações Unidas - ONU, para que houvesse a
 					partir daquele momento uma entidade internacional capaz de mediar as relações entre as
 					diferentes nações, evitando assim novas guerras.
 				</p>
@@ -178,18 +178,18 @@
 				<p>
 					<span class="image left">
 						<img src="./images/image23.png" alt="">
+						<span class="legenda">
+							Mao Tsé-Tung <br>
+								http://kdfrases.com/autor/mao-ts%C3%A9-tung	</span>
+						</span>	
 					</span>
 					Em virtude das perseguições sofridas os membros do Partido comunista
 					dão início a sua ofensiva a partir da organização feita do campo para a
 					cidade, tendo como líder Mao Tsé-Tung. O Exército Vermelho foi criado
 					e lutou em diversas batalhas contra o governo chinês. Os comunistas
-					conseguem conquistar a cidade de Pequim no ano de 1949, e Mao TséTung torna-se o grande líder da República Popular da China.
+					conseguem conquistar a cidade de Pequim no ano de 1949, e Mao Tsé-Tung torna-se o grande líder da República Popular da China.
 				</p>
-				<p>
-					Mao Tsé-Tung
-					<span style="font-size: 14px !important;">
-						http://kdfrases.com/autor/mao-ts%C3%A9-tung	</span>
-				</p>	
+
 				<p>
 					Os comunistas chineses foram apoiados pelo governo comunista soviético, colocando em
 					prática um grande projeto de transformação da política e da economia do país, chamado de
@@ -244,11 +244,14 @@
 					a bordo da Vostok 1.
 				</p>
 				<div class="img">
-					<img src="./images/image24.png" alt="">
+					<img src="./images/image24.png" alt=""> <br>
+					<span class="legenda center">
+						http://www.vivatoscana.com.br/2015/05/voce-sabe-quem-foi-dante-alighieri.html
+					</span>
 				</div>
 				<p>
 					Por seu turno, os Estados Unidos realizaram no ano de 1962 o primeiro voo espacial ao redor
-					da Terra, e em 1969 os tripulantes da Apolo 11, Neil Armstrong, Michael Collins, Edwin
+					da Terra, e em 1969 os tripulantes da Apollo 11, Neil Armstrong, Michael Collins, Edwin
 					Aldrin Jr. tornam-se os primeiros homens a andar em solo lunar.
 				</p>
 				<p>
@@ -284,7 +287,11 @@
 				</p> 
 				<p>
 					<span class="image right">
-						<img src="./images/image26.png" alt="">
+						<img src="./images/image26.png" alt=""> <br>
+						<span class="legenda">
+							Guerra entre Líbano e Israel
+							https://www.colegioweb.com.br/guerras/guerra-entre-libano-e-israel.htm
+						</span>
 					</span>
 					Nas primeiras décadas do século XXI um dos
 					principais entraves ao desenvolvimento de uma
@@ -296,12 +303,9 @@
 					para a intensificação dos problemas naquela
 					região.
 				</p>
+
 				<p>
-					Guerra entre Líbano e Israel
-					<span style="font-size: 14px !important;">https://www.colegioweb.com.br/guerras/guerra-entre-libano-e-israel.htm</span>
-				</p>
-				<p>
-					Se voltarmos nossa análise ao final da Segunda Guerra Mundial, vermos que o Oriente Médio
+					Se voltarmos nossa análise ao final da Segunda Guerra Mundial, veremos que o Oriente Médio
 					transformou-se em uma região de grandes conflitos envolvendo questões geoestratégicas
 					ligadas ao controle do petróleo. Em virtude disto, foram exploradas as rivalidades locais e os
 					conflitos religiosos justamente para que se instaurasse um clima de instabilidade ao ponto de
@@ -315,30 +319,32 @@
 					Palestina – OLP, negociando a paz com o Estado de Israel, exigindo a retirada dos territórios
 					ocupados. O que até os dias de hoje ainda não aconteceu.
 				</p>
-				<h4>O QUE APRENDI</h4>
-				<p>
-					Ao término deste capítulo você aprendeu que o maior conflito bélico entre as nações
-					mundiais teve curso na primeira metade do século XX e entrou para a história com o nome de
-					II Guerra Mundial. A II Guerra Mundial teve como pano de fundo os resquícios do termino
-					do grande conflito anterior que ao acabar, não conseguiu criar um clima de paz entre as
-					nações europeias daquele período. A Alemanha de Adolf Hitler surgiu como uma grande
-					potência no cenário geopolítica europeu, buscando ampliar seus territórios a fim de cumprir o
-					que consideram ser um destino da raça ariana, dominar os demais povos do mundo. Foi
-					graças à conjugação das forças aliadas que se pode impedir o avanço alemão, impondo-lhes
-					pesadas sanções ao termino da guerra. Nesta época tem início o processo que ficou conhecido
-					na história como a Revolução Chinesa, movimento que instituiu uma nova ordem política e
-					ideológica naquele país através das ideias socialistas. Você viu ainda que o período posterior
-					a II Guerra Mundial foi chamado de Guerra Fria, uma vez que opunha dois blocos
-					ideologicamente contrários, mas sem que com isso as potências hegemônicas da época
-					entrassem em franco confronto armado, deixando na periferia das suas zonas de influência as
-					guerras e disputas que ditaram o clima de tensão que o mundo viveu durante aqueles anos. O
-					período termina com uma reestruturação na geopolítica mundial, resultado das
-					transformações ocorridas em solo europeu e que puseram um fim aos maiores símbolos da
-					Guerra Fria, foram eles a queda do Muro de Berlin e o fim da Cortina de Ferro. O epicentro
-					dos conflitos envolvendo tangencialmente a Rússia e os EUA passou a ser o Oriente Médio,
-					palco de guerras e disputas que se notabilizou pela ferrenha oposição entre israelenses e
-					palestinos nas disputas pela posse da terra naquela região.
-				</p>	
+				<div class="destaque">
+					<h4>O QUE APRENDI</h4>
+					<p>
+						Ao término deste capítulo você aprendeu que o maior conflito bélico entre as nações
+						mundiais teve curso na primeira metade do século XX e entrou para a história com o nome de
+						II Guerra Mundial. A II Guerra Mundial teve como pano de fundo os resquícios do termino
+						do grande conflito anterior que ao acabar, não conseguiu criar um clima de paz entre as
+						nações europeias daquele período. A Alemanha de Adolf Hitler surgiu como uma grande
+						potência no cenário geopolítico europeu, buscando ampliar seus territórios a fim de cumprir o
+						que consideram ser um destino da raça ariana, dominar os demais povos do mundo. Foi
+						graças à conjugação das forças aliadas que se pode impedir o avanço alemão, impondo-lhes
+						pesadas sanções ao termino da guerra. Nesta época tem início o processo que ficou conhecido
+						na história como a Revolução Chinesa, movimento que instituiu uma nova ordem política e
+						ideológica naquele país através das ideias socialistas. Você viu ainda que o período posterior
+						a II Guerra Mundial foi chamado de Guerra Fria, uma vez que opunha dois blocos
+						ideologicamente contrários, mas sem que com isso as potências hegemônicas da época
+						entrassem em franco confronto armado, deixando na periferia das suas zonas de influência as
+						guerras e disputas que ditaram o clima de tensão que o mundo viveu durante aqueles anos. O
+						período termina com uma reestruturação na geopolítica mundial, resultado das
+						transformações ocorridas em solo europeu e que puseram um fim aos maiores símbolos da
+						Guerra Fria, foram eles a queda do Muro de Berlin e o fim da Cortina de Ferro. O epicentro
+						dos conflitos envolvendo tangencialmente a Rússia e os EUA passou a ser o Oriente Médio,
+						palco de guerras e disputas que se notabilizou pela ferrenha oposição entre israelenses e
+						palestinos nas disputas pela posse da terra naquela região.
+					</p>	
+				</div>
 			</div> <!--/inner-->
 		</section>
 
