--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1 style="color: #fff;">História</h1>
-				<p>Capítulo 1: A europa moderna: o poder das monarquias nacionais, cultura e religião num mundo em transformação.</p>
-				<p>Capítulo 2: Uma nova ordem se impõe: o culto à razão e os processos de contestação e queda do antigo regime.</p>
-				<p>Capítulo 3: As relações político-econômicas entre a europa e a américa e os processos de independência.</p>
+				<p>Capítulo 1: A Europa moderna: o poder das monarquias nacionais, cultura e religião num mundo em transformação.</p>
+				<p>Capítulo 2: Uma nova ordem se impõe: o culto à razão e os processos de contestação e queda do Antigo Regime.</p>
+				<p>Capítulo 3: As relações político-econômicas entre a Europa e a América e os processos de independência.</p>
 				<p>Capítulo 4: O mundo sobre tensão: aspectos da expansão imperialista, e o estado de beligerância no conturbado cenário interno europeu.</p>
 				<p>Capítulo 5: Um mundo em conflito: a geopolítica do século XX e as disputas em nome da ideologia. </p>
 				<ul class="actions">
